RESOLVED FIXED59125
[Qt][WK2] Cannot play flash with NSPluginWrapper
https://bugs.webkit.org/show_bug.cgi?id=59125
Summary [Qt][WK2] Cannot play flash with NSPluginWrapper
Balazs Kelemen
Reported 2011-04-21 11:42:38 PDT
NSPluginWrapper flash player is not working with WebKit2. Way to reproduce: chose a youtube video with MiniBrowser. Expected: video is playing. Current result: white screen, error message: *** NSPlugin Wrapper *** WARNING:(/usr/src/packages/BUILD/nspluginwrapper-1.3.0/src/npw-wrapper.c:3160):invoke_NP_Initialize: assertion failed: (rpc_method_invoke_possible(g_rpc_connection))
Attachments
Patch (2.18 KB, patch)
2011-04-22 07:21 PDT, Balazs Kelemen
no flags
Patch (2.21 KB, patch)
2011-04-22 07:36 PDT, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2011-04-22 07:18:54 PDT
This is actually a crash (web process), so set it to P1.
Balazs Kelemen
Comment 2 2011-04-22 07:21:10 PDT
Kenneth Rohde Christiansen
Comment 3 2011-04-22 07:27:03 PDT
Comment on attachment 90706 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=90706&action=review > Source/WebKit2/WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:513 > + // Cheat the GTK version if we now that this plugin needs it or if the plugin call us know* > Source/WebKit2/WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:520 > + RefPtr<NetscapePlugin> plugin = NetscapePlugin::fromNPP(npp); > + needToCheatGTKVersion = plugin->quirks().contains(PluginQuirks::RequiresGTKToolKit); this doesnt seem like cheating. Why not just call the variable "requiresGTKToolKit"
Balazs Kelemen
Comment 4 2011-04-22 07:36:54 PDT
Balazs Kelemen
Comment 5 2011-04-22 09:43:27 PDT
Note You need to log in before you can comment on or make changes to this bug.