2011-04-22  Balazs Kelemen  <kbalazs@webkit.org>

Reviewed by Kenneth Rohde Christiansen.

        [Qt][WK2] Cannot play flash with NSPluginWrapper
        https://bugs.webkit.org/show_bug.cgi?id=59125

        * WebProcess/Plugins/Netscape/NetscapeBrowserFuncs.cpp:
        (WebKit::NPN_GetValue): Handle the case when we have been
        called with a null plugin instance.

Canonical link: https://commits.webkit.org/74369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84634 268f45cc-cd09-0410-ab3c-d52691b4dbfc